<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/background"
    android:paddingBottom="6dp"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingTop="6dp"
    tools:context="com.example.srkg.pharmafrndz.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:textColor="@color/white"
                android:text="Welcome"
                android:gravity="center"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo1"/>


                <AutoCompleteTextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:background="@drawable/roundedgeedittext"
                    android:maxLines="1"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:singleLine="true" />

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:background="@drawable/roundedgeedittext"
                    android:maxLines="1"
                    android:layout_marginTop="20dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:singleLine="true" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:background="@drawable/roundedgeedittext"
                    android:maxLines="1"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:spinnerMode="dropdown"
                    android:singleLine="true" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkbox"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentLeft="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="26dp"
                    android:text="I accept all the terms &amp; conditions"
                    android:layout_toRightOf="@+id/checkbox"
                    />

            </RelativeLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/createaccount"
                android:textColor="@color/white"
                android:background="@drawable/roundedge"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:text="Have not account yet?"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/green"
                    android:layout_marginTop="20dp"
                    android:text="Create Account"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
